<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Chronometer
            android:id="@+id/chronometer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:format="@string/reservation_time"
            android:gravity="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reservation_start"
            android:textSize="30sp" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdoCal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_picker" />

        <RadioButton
            android:id="@+id/rdoTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_picker" />
    </RadioGroup>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <CalendarView
            android:id="@+id/calenderView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:showWeekNumber="false" />

        <TimePicker
            android:id="@+id/timePicker1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CCCCCC"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/reservation_done" />

        <TextView
            android:id="@+id/txtYear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/year" />

        <TextView
            android:id="@+id/txtMonth"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/month" />

        <TextView
            android:id="@+id/txtDay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/day" />

        <TextView
            android:id="@+id/txtHour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hour" />

        <TextView
            android:id="@+id/txtMinute"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/minute" />


    </LinearLayout>

</LinearLayout>